@@ -35,6 +35,12 @@ Documentation
   have a SessionFactory abstraction which competes with it, and maintaining
   documentation on both ways to do it is a distraction.
 
+Internal
+--------
+
+- Replace Twill with WebTest in internal integration tests (avoid deprecation
+  warnings generated by Twill).
+
 1.0a3 (2010-11-16)
 ==================
 
